fix: z-index of permissions-missing overlay

--- a/components/list-table/list-table.component.scss
+++ b/components/list-table/list-table.component.scss
@@ -77,7 +77,7 @@ $previewHeight:160px;
   position: absolute;
   left:0;
   top:0;
-  z-index: 110;
+  z-index: 10;
   text-align: center;
   padding-top: 35px;
   div{
